--- a/src/css/components/cards/card-portrait.css
+++ b/src/css/components/cards/card-portrait.css
@@ -42,7 +42,7 @@
 }
 .card-portrait {
   font-weight: var(--font-weight-normal);
-  color: var(--f-k-smk-x);
+  color: var(--gray-900);
   position: relative;
 }
 .card-portrait--inactive {
@@ -78,7 +78,7 @@
 }
 .dir.card-portrait__link:focus-visible {
   -webkit-transition: box-shadow 0.2s;
-  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x);
+  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--gray-900);
 }
 @media (prefers-reduced-motion: reduce) {
   .card-portrait__link:focus-visible {
@@ -98,7 +98,7 @@
 }
 .card-portrait {
   font-weight: var(--font-weight-normal);
-  color: var(--f-k-smk-x);
+  color: var(--gray-900);
   position: relative;
 }
 .card-portrait__link {
@@ -131,7 +131,7 @@
 }
 .dir.card-portrait__link:focus-visible {
   -webkit-transition: box-shadow 0.2s;
-  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x);
+  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--gray-900);
 }
 @media (prefers-reduced-motion: reduce) {
   .card-portrait__link:focus-visible {
@@ -158,9 +158,9 @@
   touch-action: manipulation;
   display: inline-block;
   position: relative;
-  color: var(--f-k-smk-x);
+  color: var(--gray-900);
   transition: transform 0.25s;
-  color: var(--f-mkcy-f);
+  color: var(--white);
   pointer-events: all;
 }
 .dir.card-portrait__btn-play {
@@ -208,13 +208,13 @@
   }
 }
 .card-portrait__btn-play:hover {
-  color: var(--bgxgx);
+  color: var(--black);
 }
 .dir.card-portrait__btn-play:hover::before {
-  background: var(---pc-g-v-g);
+  background: var(--gray-100);
 }
 .card-portrait__btn-play:active {
-  color: var(--bgxgx);
+  color: var(--black);
   -webkit-transform: scale(0.92);
   -ms-transform: scale(0.92);
 }
@@ -222,7 +222,7 @@
   transform: scale(0.92);
 }
 .dir.card-portrait__btn-play:active::before {
-  background: var(---pc-g-v-g);
+  background: var(--gray-100);
 }
 .dir.card-portrait__btn-play::-moz-focus-inner {
   border: none;
@@ -251,11 +251,11 @@
   }
 }
 .dir.card-portrait__btn-play:focus-visible::before {
-  box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px rgba(255, 255, 255, 0.8);
-  background: var(---pc-g-v-g);
+  box-shadow: 0 0 0 2px var(--gray-900), 0 0 0 4px rgba(255, 255, 255, 0.8);
+  background: var(--gray-100);
 }
 .card-portrait__btn-play:disabled {
-  color: var(--j-qkgmf);
+  color: var(--gray-300);
 }
 .dir.card-portrait__btn-play:disabled::before {
   background: 0 0;
@@ -282,7 +282,7 @@
   height: 32px;
 }
 .card-portrait__btn-play:hover {
-  color: var(--f-mkcy-f);
+  color: var(--white);
 }
 .card-portrait__btn-play:hover::before {
   -webkit-backdrop-filter: blur(14px);
@@ -292,7 +292,7 @@
   background: rgba(255, 255, 255, 0.16);
 }
 .card-portrait__btn-play:active {
-  color: var(--f-mkcy-f);
+  color: var(--white);
 }
 .card-portrait__btn-play:active::before {
   -webkit-backdrop-filter: blur(14px);
@@ -482,7 +482,7 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
-  color: var(--f-k-smk-x);
+  color: var(--gray-900);
 }
 .dir.card-portrait__secondary-line {
   margin-bottom: var(--spacer-1);
@@ -529,7 +529,7 @@
     var(--margin-left, 0);
 }
 .card-portrait__overline-middot {
-  color: var(--theme_typography-color-secondary, var(--fo-jk-r-s));
+  color: var(--theme_typography-color-secondary, var(--gray-500));
 }
 .dir-ltr.card-portrait__overline-middot {
   margin-left: var(--spacer-2);
@@ -543,7 +543,7 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
-  color: var(--theme_typography-color-secondary, var(--fo-jk-r-s));
+  color: var(--theme_typography-color-secondary, var(--gray-500));
 }
 @supports (overflow: clip) {
   .card-portrait__overline-text {
@@ -555,7 +555,7 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  color: var(--theme_typography-color-primary, var(--f-k-smk-x));
+  color: var(--theme_typography-color-primary, var(--gray-900));
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
