--- a/src/css/root.css
+++ b/src/css/root.css
@@ -10,14 +10,14 @@
   --box-shadow-alt-3: 0 2px 4px rgba(0, 0, 0, 0.18);
   --timing-function-alt-1: cubic-bezier(0, 0, 0.1, 1);
   --timing-function-alt-2: cubic-bezier(0.35, 0, 0.65, 1);
-  --bgxgx: #000000;
-  --f-k-smk-x: #222222;
-  --fo-jk-r-s: #717171;
-  --iw-ihca: #b0b0b0;
-  --j-qkgmf: #dddddd;
-  --d-nc-lt-s: #ebebeb;
-  ---pc-g-v-g: #f7f7f7;
-  --f-mkcy-f: #ffffff;
+  --black: #000000;
+  --gray-900: #222222;
+  --gray-500: #717171;
+  --gray-400: #b0b0b0;
+  --gray-300: #dddddd;
+  --gray-200: #ebebeb;
+  --gray-100: #f7f7f7;
+  --white: #ffffff;
   --k-va-tnc: #c13515;
   --cnr-vp-o: #b32505;
   --f-p-k-v-lb: #fff8f6;
@@ -112,14 +112,14 @@
   --box-shadow-alt-3: 0 2px 4px rgba(0, 0, 0, 0.18);
   --timing-function-alt-1: cubic-bezier(0, 0, 0.1, 1);
   --timing-function-alt-2: cubic-bezier(0.35, 0, 0.65, 1);
-  --bgxgx: #000000;
-  --f-k-smk-x: #222222;
-  --fo-jk-r-s: #717171;
-  --iw-ihca: #b0b0b0;
-  --j-qkgmf: #dddddd;
-  --d-nc-lt-s: #ebebeb;
-  ---pc-g-v-g: #f7f7f7;
-  --f-mkcy-f: #ffffff;
+  --black: #000000;
+  --gray-900: #222222;
+  --gray-500: #717171;
+  --gray-400: #b0b0b0;
+  --gray-300: #dddddd;
+  --gray-200: #ebebeb;
+  --gray-100: #f7f7f7;
+  --white: #ffffff;
   --k-va-tnc: #c13515;
   --cnr-vp-o: #b32505;
   --f-p-k-v-lb: #fff8f6;
@@ -219,14 +219,14 @@
   --box-shadow-alt-3: 0 2px 4px rgba(0, 0, 0, 0.18);
   --timing-function-alt-1: cubic-bezier(0, 0, 0.1, 1);
   --timing-function-alt-2: cubic-bezier(0.35, 0, 0.65, 1);
-  --bgxgx: #000000;
-  --f-k-smk-x: #222222;
-  --fo-jk-r-s: #717171;
-  --iw-ihca: #b0b0b0;
-  --j-qkgmf: #dddddd;
-  --d-nc-lt-s: #ebebeb;
-  ---pc-g-v-g: #f7f7f7;
-  --f-mkcy-f: #ffffff;
+  --black: #000000;
+  --gray-900: #222222;
+  --gray-500: #717171;
+  --gray-400: #b0b0b0;
+  --gray-300: #dddddd;
+  --gray-200: #ebebeb;
+  --gray-100: #f7f7f7;
+  --white: #ffffff;
   --k-va-tnc: #c13515;
   --cnr-vp-o: #b32505;
   --f-p-k-v-lb: #fff8f6;
@@ -329,14 +329,14 @@
     --box-shadow-alt-3: 0 2px 4px rgba(0, 0, 0, 0.18);
     --timing-function-alt-1: cubic-bezier(0, 0, 0.1, 1);
     --timing-function-alt-2: cubic-bezier(0.35, 0, 0.65, 1);
-    --bgxgx: #000000;
-    --f-k-smk-x: #222222;
-    --fo-jk-r-s: #717171;
-    --iw-ihca: #b0b0b0;
-    --j-qkgmf: #dddddd;
-    --d-nc-lt-s: #ebebeb;
-    ---pc-g-v-g: #f7f7f7;
-    --f-mkcy-f: #ffffff;
+    --black: #000000;
+    --gray-900: #222222;
+    --gray-500: #717171;
+    --gray-400: #b0b0b0;
+    --gray-300: #dddddd;
+    --gray-200: #ebebeb;
+    --gray-100: #f7f7f7;
+    --white: #ffffff;
     --k-va-tnc: #c13515;
     --cnr-vp-o: #b32505;
     --f-p-k-v-lb: #fff8f6;
