--- a/src/css/components/cards/card-alt-1.css
+++ b/src/css/components/cards/card-alt-1.css
@@ -117,7 +117,7 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
-  color: var(--fo-jk-r-s);
+  color: var(--gray-500);
 }
 @supports (overflow: clip) {
   .card-alt-1__info[class][class] {
@@ -131,7 +131,7 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: var(--title_max-num-lines, 1);
-  color: var(--f-k-smk-x);
+  color: var(--gray-900);
   font-weight: var(--font-weight-semibold);
   word-break: var(--title_word-break, break-all);
 }
@@ -177,7 +177,7 @@
 }
 .dir.card-alt-1__media-container[class][class] {
   border-radius: var(--media-container_border-radius, var(--border-radius-lg));
-  background-color: var(--j-qkgmf);
+  background-color: var(--gray-300);
 }
 @supports (overflow: clip) {
   .card-alt-1__media-container[class][class] {
@@ -256,7 +256,7 @@
   justify-self: flex-end;
 }
 .card-alt-1__ratings-text[class][class] {
-  color: var(--f-k-smk-x);
+  color: var(--gray-900);
   font-variant-numeric: tabular-nums;
 }
 .card-alt-1__ratings-icon[class][class] {
@@ -264,7 +264,7 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  color: var(--f-k-smk-x);
+  color: var(--gray-900);
 }
 .card-alt-1[class][class] {
   position: relative;
