--- a/src/css/components/cards/card-basic.css
+++ b/src/css/components/cards/card-basic.css
@@ -1,6 +1,6 @@
 /* Card Basic */
 .card-basic__title[class][class] {
-  color: var(--f-k-smk-x);
+  color: var(--gray-900);
   font-size: var(--font-size-md);
   line-height: var(--line-height-lg);
   font-weight: var(--font-weight-semibold);
@@ -38,7 +38,7 @@
 }
 .dir.card-basic__outer[class][class]:focus-visible {
   transition: box-shadow 0.2s;
-  box-shadow: 0 0 0 2px var(--f-k-smk-x);
+  box-shadow: 0 0 0 2px var(--gray-900);
 }
 @media (prefers-reduced-motion: reduce) {
   .dir.card-basic__outer[class][class]:focus-visible {
