--- a/src/css/components/explore-filter-menu.css
+++ b/src/css/components/explore-filter-menu.css
@@ -11,7 +11,7 @@
   font-size: var(--font-size);
   line-height: var(--line-height-md);
   font-weight: var(--font-weight-normal);
-  color: var(--fo-jk-r-s);
+  color: var(--gray-500);
 }
 .dir.explore-filter-menu__price-title[class][class] {
   padding-bottom: var(--spacer-8);
