--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1077,11 +1077,11 @@
 }
 .header__nav-profile-badge {
   background-color: var(--ihf-tp-q)!important;
-  box-shadow: 0 0 0 1.5px var(--f-mkcy-f)!important;
+  box-shadow: 0 0 0 1.5px var(--white)!important;
   position: absolute!important;
   z-index: 1!important;
   border-radius: 500px!important;
-  color: var(--f-mkcy-f)!important;
+  color: var(--white)!important;
   font-size: var(--font-size-xxs)!important;
   font-weight: var(--font-weight-bold)!important;
   height: 1rem!important;
@@ -1645,7 +1645,7 @@
 .t2353uq[class][class] {
   font-size: var(--font-size);
   line-height: var(--line-height-md);
-  color: var(--f-k-smk-x);
+  color: var(--gray-900);
   font-weight: var(--font-weight-semibold)
 }
 .dir.t2353uq[class][class] {
@@ -1671,7 +1671,7 @@
   appearance: none!important;
   background: 0 0!important;
   border: 1px solid!important;
-  color: var(--f-k-smk-x)!important;
+  color: var(--gray-900)!important;
   cursor: pointer!important;
   display: -webkit-inline-box!important;
   display: -moz-inline-box!important;
@@ -1694,7 +1694,7 @@
   user-select: auto!important;
   -webkit-align-items: center!important;
   align-items: center!important;
-  background-color: var(--f-mkcy-f)!important;
+  background-color: var(--white)!important;
   border-radius: 21px!important;
   height: 42px!important;
   position: relative!important;
@@ -1810,7 +1810,7 @@
   user-select: auto;
   font-size: var(--font-size-sm);
   line-height: var(--line-height-sm);
-  color: var(--f-k-smk-x);
+  color: var(--gray-900);
   display: flex;
   white-space: nowrap;
   width: 100%;
@@ -1838,11 +1838,11 @@
   outline: 0
 }
 .dir.c1b2ssu5[class][class]:hover:not(:active) {
-  background-color: var(---pc-g-v-g)
+  background-color: var(--gray-100)
 }
 .dir.c1b2ssu5[class][class]:focus-visible {
   transition: box-shadow .2s;
-  box-shadow: inset 0 0 0 2px var(--f-k-smk-x)
+  box-shadow: inset 0 0 0 2px var(--gray-900)
 }
 @media (prefers-reduced-motion:reduce) {
   .dir.c1b2ssu5[class][class]:focus-visible {
@@ -1877,7 +1877,7 @@
 .a90wtny[class][class] {
   font-size: var(--font-size-xs);
   line-height: var(--line-height-xs);
-  color: var(--fo-jk-r-s);
+  color: var(--gray-500);
   display: inline-block;
   flex: 0 0 auto;
   font-weight: var(--font-weight-normal)
@@ -1900,7 +1900,7 @@
   user-select: auto;
   font-size: var(--font-size-sm);
   line-height: var(--line-height-sm);
-  color: var(--f-k-smk-x);
+  color: var(--gray-900);
   display: flex;
   white-space: nowrap;
   width: 100%;
@@ -1928,11 +1928,11 @@
   outline: 0
 }
 .dir.c1iyjvyv[class][class]:hover:not(:active) {
-  background-color: var(---pc-g-v-g)
+  background-color: var(--gray-100)
 }
 .dir.c1iyjvyv[class][class]:focus-visible {
   transition: box-shadow .2s;
-  box-shadow: inset 0 0 0 2px var(--f-k-smk-x)
+  box-shadow: inset 0 0 0 2px var(--gray-900)
 }
 @media (prefers-reduced-motion:reduce) {
   .dir.c1iyjvyv[class][class]:focus-visible {
@@ -1975,7 +1975,7 @@
   }
 }
 .c1ixqffw[class][class] {
-  color: var(--f-k-smk-x);
+  color: var(--gray-900);
   display: none;
   position: absolute;
   top: 50%;
@@ -1985,7 +1985,7 @@
   min-width: 240px
 }
 .dir.c1ixqffw[class][class] {
-  background: var(--f-mkcy-f);
+  background: var(--white);
   border-radius: var(--border-radius-lg);
   box-shadow: 0 2px 16px rgba(0,0,0,.12);
   margin-top: 34px;
@@ -2002,7 +2002,7 @@ button[data-testid=cypress-headernav-profile]:focus + .c3i7glo[class][class] {
   height: 1px
 }
 .dir.d7qkrn2[class][class] {
-  background: var(--j-qkgmf);
+  background: var(--gray-300);
   margin: 8px 0
 }
 @media (prefers-reduced-motion:reduce) {
@@ -2023,7 +2023,7 @@ button[data-testid=cypress-headernav-profile]:focus + .c3i7glo[class][class] {
 @media (min-width:744px) {
   .dir.click_card[class][class]:focus-visible {
     transition: box-shadow .2s;
-    box-shadow: 0 0 0 2px rgba(255,255,255,.8),0 0 0 4px var(--f-k-smk-x)
+    box-shadow: 0 0 0 2px rgba(255,255,255,.8),0 0 0 4px var(--gray-900)
   }
   @media (prefers-reduced-motion:reduce) {
     .dir.click_card[class][class]:focus-visible {
